# n-ring

./: .breakpoints  .dockerignore  .gitignore  README.md  define.py  define_first.py  fly.toml  keep_alive.py  loop.py  main.py  ngo.bat  ngo.py  package.json  pyproject.toml  requirements.txt
.deta/: prog_info  state
command_files/: _error.py  _ready.py  ceelo.py  challenge.py  debug_cmd.py  dice.py  live.py  map.py  ohayou.py  omikuji.py  oyasumi,py  oyasumi.py  soyjoy.py  talk.py  team.py  testcm.py
command_files/beginner_custom/: scmap.py  scteam.py
command_files/cl/: cl.py
command_files/cl/role/: delete.py  edit.py  loop.py  remove.py
command_files/gamebase/: tcard.py
command_files/ngold/: embed.py  ng_sys_cmd.py  ng_user_cmd.py  ngolds.py
command_files/splatoon/: sp3_weapons.py
command_files/user/data/: init.py
command_files/valorant/: valo_agent.py  valo_weapons.py
nring_storage/: ngo_data.json  omikuji_list.py  temp_omikuji.md
nring_storage/cl/: cl_editable.py
nring_storage/n_users/: ng_storage.csv
nring_storage/splatoon3/: _temp.py  maps.py  weapons.py
nring_storage/valorant/: agents.py  maps.py
storages/cl/: cl_editable.py  cl_list.py
storages/splatoon3/: _temp.py  maps.py  weapons.py
storages/valorant/: maps.py
